fix scroll on mobile

--- a/client/static/assets/css/styles.less
+++ b/client/static/assets/css/styles.less
@@ -6,7 +6,10 @@
 	margin: 0;
 }
 
-html { overflow-y:hidden; }
+html { 
+	overflow-y:hidden; 
+	height: 100%; //maybe	
+}
 body {
 	background-color: #111;
 	color: @ltegrey;
@@ -16,6 +19,8 @@ body {
 
 	#wrapper {
 		padding-top: 90px;
+		height: 100%; //maybe
+		
 		// background-color: @drkgrey;
 		// background-image: url(../img/gradient-bg.png);
 		// background-position: center;
